add prometheus-node-exporter and use http for kubernetes-service-endpoints https not available https://github.com/prometheus/node_exporter/issues/99

--- a/deploy/prometheus.yaml
+++ b/deploy/prometheus.yaml
@@ -84,7 +84,7 @@ data:
       - action: labelmap
         regex: __meta_kubernetes_node_label_(.+)
     - job_name: 'kubernetes-service-endpoints'
-      scheme: https
+      scheme: http
       kubernetes_sd_configs:
       - api_servers:
         - 'https://kubernetes.default'
