--- a/deploy/prometheus.yaml
+++ b/deploy/prometheus.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus
+  namespace: infra
+  labels:
+    name: prometheus
+spec:
+  selector:
+    app: prometheus
+  ports:
+  - name: http
+    port: 80
+    targetPort: 9090
+    protocol: TCP
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
