update kibana to version 4.1.11 to fix search inputtext update prometheus to v1.5.0 update promethues node-exporter to v0.13.0

--- a/deploy/grafana.yaml
+++ b/deploy/grafana.yaml
@@ -20,7 +20,7 @@ metadata:
     name: grafana
 spec:
   rules:
-  - host: grafana.traffics.de
+  - host: grafana.internal.domain.com
     http:
       paths:
       - path: /
