--- a/deploy/prometheus-node-exporter.yaml
+++ b/deploy/prometheus-node-exporter.yaml
@@ -7,6 +7,7 @@ metadata:
     app: node-exporter
     name: node-exporter
   name: node-exporter
+  namespace: infra
 spec:
   clusterIP: None
   ports:
@@ -21,15 +22,17 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: node-exporter
+  namespace: infra
 spec:
   template:
     metadata:
       labels:
         app: node-exporter
       name: node-exporter
+      namespace: infra
     spec:
       containers:
-      - image: prom/node-exporter
+      - image: quay.io/prometheus/node-exporter:v0.13.0
         name: node-exporter
         ports:
         - containerPort: 9100
