--- a/deploy/prometheus.yaml
+++ b/deploy/prometheus.yaml
@@ -74,36 +74,30 @@ data:
     - job_name: 'prometheus'
       static_configs:
         - targets: ['localhost:9090']
-    - job_name: 'kubernetes-cluster'
+    - job_name: 'kubernetes-apiservers'
+      kubernetes_sd_configs:
+      - role: endpoints
       scheme: https
       tls_config:
         ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      kubernetes_sd_configs:
-      - api_servers:
-        - 'https://kubernetes.default'
-        in_cluster: true
-        role: apiserver
+      relabel_configs:
+      - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+        action: keep
+        regex: default;kubernetes;https
     - job_name: 'kubernetes-nodes'
       scheme: https
       tls_config:
         ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        insecure_skip_verify: true
       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       kubernetes_sd_configs:
-      - api_servers:
-        - 'https://kubernetes.default'
-        in_cluster: true
-        role: node
+      - role: node
       relabel_configs:
       - action: labelmap
         regex: __meta_kubernetes_node_label_(.+)
     - job_name: 'kubernetes-service-endpoints'
       kubernetes_sd_configs:
-      - api_servers:
-        - 'https://kubernetes.default'
-        in_cluster: true
-        role: endpoint
+      - role: endpoints
       relabel_configs:
       - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
         action: keep
@@ -123,22 +117,18 @@ data:
         replacement: $1:$2
       - action: labelmap
         regex: __meta_kubernetes_service_label_(.+)
-      - source_labels: [__meta_kubernetes_service_namespace]
+      - source_labels: [__meta_kubernetes_namespace]
         action: replace
         target_label: kubernetes_namespace
       - source_labels: [__meta_kubernetes_service_name]
         action: replace
         target_label: kubernetes_name
     - job_name: 'kubernetes-services'
-      scheme: https
       metrics_path: /probe
       params:
         module: [http_2xx]
       kubernetes_sd_configs:
-      - api_servers:
-        - 'https://kubernetes.default'
-        in_cluster: true
-        role: service
+      - role: service
       relabel_configs:
       - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
         action: keep
@@ -156,12 +146,8 @@ data:
       - source_labels: [__meta_kubernetes_service_name]
         target_label: kubernetes_name
     - job_name: 'kubernetes-pods'
-      scheme: https
       kubernetes_sd_configs:
-      - api_servers:
-        - 'https://kubernetes.default'
-        in_cluster: true
-        role: pod
+      - role: pod
       relabel_configs:
       - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
         action: keep
@@ -177,50 +163,9 @@ data:
         target_label: __address__
       - action: labelmap
         regex: __meta_kubernetes_pod_label_(.+)
-      - source_labels: [__meta_kubernetes_pod_namespace]
+      - source_labels: [__meta_kubernetes_namespace]
         action: replace
         target_label: kubernetes_namespace
       - source_labels: [__meta_kubernetes_pod_name]
         action: replace
         target_label: kubernetes_pod_name
-    - job_name: kubernetes-nodes-cadvisor
-      tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      kubernetes_sd_configs:
-        - api_servers:
-            - https://kubernetes.default
-          in_cluster: true
-          role: node
-      relabel_configs:
-        - action: labelmap
-          regex: __meta_kubernetes_node_label_(.+)
-        - source_labels: [__meta_kubernetes_role]
-          action: replace
-          target_label: kubernetes_role
-      metric_relabel_configs:
-        - source_labels: [id]
-          action: replace
-          regex: '^/machine\.slice/machine-rkt\\x2d([^\\]+)\\.+/([^/]+)\.service$'
-          target_label: rkt_container_name
-          replacement: '${2}-${1}'
-        - source_labels: [id]
-          action: replace
-          regex: '^/system\.slice/(.+)\.service$'
-          target_label: systemd_service_name
-          replacement: '${1}'
-    - job_name: kubernetes-apiserver-cadvisor
-      tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      kubernetes_sd_configs:
-        - api_servers:
-            - https://kubernetes.default
-          in_cluster: true
-          role: apiserver
-      relabel_configs:
-        - action: labelmap
-          regex: __meta_kubernetes_node_label_(.+)
-        - source_labels: [__meta_kubernetes_role]
-          action: replace
-          target_label: kubernetes_role
