--- a/deploy/grafana.yaml
+++ b/deploy/grafana.yaml
@@ -45,7 +45,7 @@ spec:
         app: grafana
     spec:
       containers:
-      - image: grafana/grafana:3.1.1
+      - image: grafana/grafana:4.1.1
         name: grafana
         imagePullPolicy: Always
         ports:
@@ -57,3 +57,5 @@ spec:
             value: "true"
           - name: GF_AUTH_ANONYMOUS_ORG_ROLE
             value: Admin
+          - name: GF_SERVER_ROOT_URL
+            value: http://grafana.internal.domain.com
