--- a/deploy/es.yaml
+++ b/deploy/es.yaml
@@ -23,6 +23,23 @@ spec:
     port: 9300
     protocol: TCP
 ---
+kind: Ingress
+apiVersion: extensions/v1beta1
+metadata:
+  name: elasticsearch
+  namespace: infra
+  labels:
+    name: elasticsearch
+spec:
+  rules:
+  - host: elasticsearch.internal.domain.com
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: elasticsearch
+          servicePort: 9200
+---
 apiVersion: v1
 kind: ReplicationController
 metadata:
