--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -22,25 +22,6 @@ metadata:
   labels:
     k8s-app: traefik-ingress-lb
     name: traefik-ingress-controller
-  annotations:
-    scheduler.alpha.kubernetes.io/affinity: >
-      {
-        "nodeAffinity": {
-          "requiredDuringSchedulingRequiredDuringExecution": {
-            "nodeSelectorTerms": [
-              {
-                "matchExpressions": [
-                  {
-                    "key": "role",
-                    "operator": "In",
-                    "values": ["ingress"]
-                  }
-                ]
-              }
-            ]
-          }
-        }
-      }
 spec:
   replicas: 1
   selector:
@@ -67,3 +48,5 @@ spec:
         - --web
         - --kubernetes
         - --logLevel=DEBUG
+      nodeSelector:
+        role: ingress
