--- a/deploy/kube-state-metrics.yaml
+++ b/deploy/kube-state-metrics.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: kube-state-metrics
+  namespace: infra
   annotations:
     prometheus.io/scrape: 'true'
-  name: kube-state-metrics
   labels:
     app: kube-state-metrics
 spec:
@@ -18,10 +19,12 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kube-state-metrics-deployment
+  namespace: infra
 spec:
   replicas: 1
   template:
     metadata:
+      namespace: infra
       labels:
         app: kube-state-metrics
         version: "v0.3.0"
